@@ -519,7 +519,7 @@ bson_as_canonical_extended_json (const bson_t *bson, size_t *length);
 
 
 /**
- * bson_as_json:
+ * bson_as_legacy_extended_json:
  * @bson: A bson_t.
  * @length: A location for the string length, or NULL.
  *
@@ -531,10 +531,7 @@ bson_as_canonical_extended_json (const bson_t *bson, size_t *length);
  *
  * Returns: A newly allocated string that should be freed with bson_free().
  */
-BSON_DEPRECATED_FOR (bson_as_legacy_extended_json)
-BSON_EXPORT (char *) bson_as_json (const bson_t *bson, size_t *length);
 
-// `bson_as_legacy_extended_json` is a non-deprecated form of `bson_as_json`.
 BSON_EXPORT (char *)
 bson_as_legacy_extended_json (const bson_t *bson, size_t *length);
 
@@ -561,11 +558,7 @@ BSON_EXPORT (char *)
 bson_as_relaxed_extended_json (const bson_t *bson, size_t *length);
 
 
-/* like bson_as_json() but for outermost arrays. */
-BSON_DEPRECATED_FOR (bson_array_as_legacy_extended_json)
-BSON_EXPORT (char *) bson_array_as_json (const bson_t *bson, size_t *length);
-
-// `bson_array_as_legacy_extended_json` is a non-deprecated form of `bson_array_as_json`.
+/* like bson_as_legacy_extended_json() but for outermost arrays. */
 BSON_EXPORT (char *)
 bson_array_as_legacy_extended_json (const bson_t *bson, size_t *length);
 
